--- a/dev/_modules/nglview/shape.html
+++ b/dev/_modules/nglview/shape.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>nglview.shape &mdash; NGLView 0.5.2a+181.g2ed88da.dirty documentation</title>
+    <title>nglview.shape &mdash; NGLView 0.5.2a+184.g7991b99 documentation</title>
     
     <link rel="stylesheet" href="../../_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0.5.2a+181.g2ed88da.dirty',
+        VERSION:     '0.5.2a+184.g7991b99',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../_static/doctools.js"></script>
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="NGLView 0.5.2a+181.g2ed88da.dirty documentation" href="../../index.html" />
+    <link rel="top" title="NGLView 0.5.2a+184.g7991b99 documentation" href="../../index.html" />
     <link rel="up" title="Module code" href="../index.html" /> 
   </head>
   <body role="document">
@@ -37,7 +37,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">NGLView 0.5.2a+181.g2ed88da.dirty documentation</a> &raquo;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">NGLView 0.5.2a+184.g7991b99 documentation</a> &raquo;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" accesskey="U">Module code</a> &raquo;</li> 
       </ul>
     </div>  
@@ -66,7 +66,8 @@
 <span class="sd">    &gt;&gt;&gt; view = nv.NGLWidget()</span>
 <span class="sd">    &gt;&gt;&gt; view</span>
 <span class="sd">    &gt;&gt;&gt; shape = nv.Shape(view=view)</span>
-<span class="sd">    &gt;&gt;&gt; shape.add_sphere(from=[0, 0, 0], to=[10, 10, 10], color=[1, 0, 0], radius=1.5])</span>
+<span class="sd">    &gt;&gt;&gt; # TODO: add example</span>
+<span class="sd">    &gt;&gt;&gt; shape.add_sphere(...)</span>
 
 <span class="sd">    See also</span>
 <span class="sd">    --------</span>
@@ -98,7 +99,7 @@
 
 <span class="sd">        Examples</span>
 <span class="sd">        --------</span>
-<span class="sd">        &gt;&gt;&gt; shape = nv.Shape(view)</span>
+<span class="sd">        # TODO : add me</span>
 
 <span class="sd">        See also</span>
 <span class="sd">        --------</span>
@@ -135,7 +136,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">NGLView 0.5.2a+181.g2ed88da.dirty documentation</a> &raquo;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">NGLView 0.5.2a+184.g7991b99 documentation</a> &raquo;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" >Module code</a> &raquo;</li> 
       </ul>
     </div>
