--- a/dev/_modules/index.html
+++ b/dev/_modules/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Overview: module code &mdash; NGLView 0.5.2a+366.g8d5d3f4 documentation</title>
+    <title>Overview: module code &mdash; NGLView 0.5.2a+366.g8d5d3f4.dirty documentation</title>
     
     <link rel="stylesheet" href="../_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.5.2a+366.g8d5d3f4',
+        VERSION:     '0.5.2a+366.g8d5d3f4.dirty',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="NGLView 0.5.2a+366.g8d5d3f4 documentation" href="../index.html" /> 
+    <link rel="top" title="NGLView 0.5.2a+366.g8d5d3f4.dirty documentation" href="../index.html" /> 
   </head>
   <body role="document">
     <div class="related" role="navigation" aria-label="related navigation">
@@ -36,7 +36,7 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">NGLView 0.5.2a+366.g8d5d3f4 documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="../index.html">NGLView 0.5.2a+366.g8d5d3f4.dirty documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -85,7 +85,7 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">NGLView 0.5.2a+366.g8d5d3f4 documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="../index.html">NGLView 0.5.2a+366.g8d5d3f4.dirty documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
