--- a/dev/search.html
+++ b/dev/search.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Search &mdash; NGLView 0.5.2a+278.g1b26760 documentation</title>
+    <title>Search &#8212; NGLView 0.6.1+8.geda1f18 documentation</title>
     
     <link rel="stylesheet" href="_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0.5.2a+278.g1b26760',
+        VERSION:     '0.6.1+8.geda1f18',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -25,7 +25,9 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/javascript" src="_static/searchtools.js"></script>
-    <link rel="top" title="NGLView 0.5.2a+278.g1b26760 documentation" href="index.html" />
+    <link rel="index" title="Index" href="genindex.html" />
+    <link rel="search" title="Search" href="#" />
+    <link rel="top" title="NGLView 0.6.1+8.geda1f18 documentation" href="index.html" />
   <script type="text/javascript">
     jQuery(function() { Search.loadIndex("searchindex.js"); });
   </script>
@@ -44,7 +46,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">NGLView 0.5.2a+278.g1b26760 documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">NGLView 0.6.1+8.geda1f18 documentation</a> &#187;</li> 
       </ul>
     </div>  
 
@@ -95,13 +97,13 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">NGLView 0.5.2a+278.g1b26760 documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">NGLView 0.6.1+8.geda1f18 documentation</a> &#187;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &copy; Copyright 2016, Alexander Rose, Hai Nguyen.
-      Last updated on Nov 07, 2016.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.4.1.
+        &#169; Copyright 2016, Alexander Rose, Hai Nguyen.
+      Last updated on Nov 23, 2016.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.4.8.
     </div>
   </body>
 </html>
